--- a/requirements.txt
+++ b/requirements.txt
@@ -40,9 +40,15 @@ ipycanvas>=0.9.1
 ipyleaflet
 
 # Python: plotting libraries (optional)
-plotly>=6,<7
-bqplot
+#plotly>=6,<7
+#bqplot
+
+# data science
+numpy
+scipy
+sympy
+matplotlib
 
 # Custom
 # slides / RISE
-jupyterlab-slideshow
+jupyterlab-rise
