--- a/requirements.txt
+++ b/requirements.txt
@@ -37,10 +37,10 @@ ipympl>=0.8.2
 # Python: ipycanvas library for Jupyter notebooks (optional)
 ipycanvas>=0.9.1
 # Python: ipyleaflet library for Jupyter notebooks (optional)
-ipyleaflet
+# ipyleaflet
 
 # Python: plotting libraries (optional)
-#plotly>=6,<7
+plotly>=6,<7
 #bqplot
 
 # data science
@@ -48,8 +48,7 @@ numpy
 scipy
 sympy
 matplotlib
-plotly
 
 # Custom
 # slides / RISE
-jupyterlab-rise
+jupyterlab-slideshow
